--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FIREBASE_CREDENTIALS=public/storage/firebase/firebase_credentials.json
+
+CLOUDINARY_CLOUD_NAME=dvajqycpe
+CLOUDINARY_API_KEY=654326293351769
+CLOUDINARY_API_SECRET=_eYHmps4mIv8RQW1qEbv7Hnpncw
